--- a/notex-ui/src/components/FolderSection/styles.module.css
+++ b/notex-ui/src/components/FolderSection/styles.module.css
@@ -1,3 +1,34 @@
 .folderSection {
-  border: 1px solid black;
+  border: 2px solid rgb(127, 126, 126);
+  border-top: none;
+  height: calc(100vh - 60px);
+  display: flex;
+  flex-direction: column;
+  padding: 5px 10px;
+  background-color: rgb(247, 245, 247);
+}
+
+.folderButton {
+  display: flex;
+  align-items: center;
+  text-align: left;
+  margin-bottom: 2px;
+  padding: 5px 10px;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.activeFolderButton {
+  display: flex;
+  align-items: center;
+  text-align: left;
+  margin-bottom: 2px;
+  padding: 5px 10px;
+  border-radius: 3px;
+  cursor: pointer;
+  background-color: rgb(120, 167, 218);
+  font-size: 16px;
+  color: white;
 }
