--- a/notex-ui/src/components/NotesSection/styles.module.css
+++ b/notex-ui/src/components/NotesSection/styles.module.css
@@ -4,7 +4,7 @@
   border: 2px solid rgb(127, 126, 126);
   border-top: none;
   border-left: none;
-  height: calc(100vh - 60px);
+  height: 100%;
   padding: 5px 10px;
   background-color: rgb(247, 245, 247);
 }
