--- a/notex-ui/src/components/ToolBarSection/styles.module.css
+++ b/notex-ui/src/components/ToolBarSection/styles.module.css
@@ -1,6 +1,7 @@
 .toolbarSection {
   padding: 8px;
-  height: 50px;
+  min-height: 50px;
+  max-height: 120px;
   display: flex;
   align-items: center;
   background-color: rgb(241, 237, 241);
