--- a/notex-ui/src/index.css
+++ b/notex-ui/src/index.css
@@ -3,3 +3,16 @@
   padding: 0;
   font-family: "Google Sans Flex", sans-serif;
 }
+
+.ProseMirror {
+  font-family: inherit;
+  line-height: 1.5rem;
+}
+
+.ProseMirror h1,
+.ProseMirror h2,
+.ProseMirror p,
+.ProseMirror ul,
+.ProseMirror ol {
+  margin: 0;
+}
